--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [pytest]
 flake8-max-line-length = 120
 addopts =
-    --cov=YOUR_PACKAGE
+    --cov=sim_adjuster
     --cov-branch
     --cov-report=term-missing:skip-covered
 #    --cov-fail-under=100
